# future_gadget_15_biome_term

./: .gitignore  README.md
client/: .gitignore  README.md  mix.exs
client/assets/: tailwind.config.js
client/assets/css/: app.css
client/assets/js/: app.js  terminal_hooks.js
client/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
client/lib/: terminal_ui.ex  terminal_ui_web.ex
client/lib/terminal_ui/: application.ex  pane_lifecycle_socket.ex  pane_socket.ex  pane_supervisor.ex  terminal_client.ex
client/lib/terminal_ui_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
client/lib/terminal_ui_web/components/: core_components.ex  layouts.ex
client/lib/terminal_ui_web/components/layouts/: root.html.heex
client/lib/terminal_ui_web/controllers/: error_html.ex  error_json.ex  page_controller.ex  page_html.ex  session_controller.ex  session_html.ex
client/lib/terminal_ui_web/controllers/session_html/: new.html.heex
client/lib/terminal_ui_web/live/: terminal_live.ex  terminal_live.html.heex
client/lib/terminal_ui_web/plugs/: auth.ex
client/test/support/: conn_case.ex
client/test/terminal_ui/: pane_lifecycle_socket_test.exs  pane_socket_test.exs
client/test/terminal_ui_web/controllers/: error_html_test.exs  error_json_test.exs  page_controller_test.exs
client/test/terminal_ui_web/live/: terminal_live_test.exs
client_rs/: Cargo.toml
client_rs/src/: client.rs  lib.rs  types.rs
docs/: api.md
gui_client_rs/: Cargo.toml
gui_client_rs/src/: main.rs
server/: Cargo.toml
server/src/: auth.rs  error.rs  event.rs  lib.rs  main.rs  openapi.rs  pane.rs  pane_lifecycle.rs  state.rs
server/src/handlers/: config.rs  create.rs  delete.rs  events.rs  group.rs  input.rs  lifecycle.rs  list.rs  mod.rs  resize.rs  screen.rs  stream.rs
server/tests/: integration.rs
