[package]
name = "biome-term-gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "biome-term-gui"
path = "src/main.rs"

[dependencies]
biome-term-client = { path = "../client_rs" }
eframe  = "0.29"
egui    = "0.29"
tokio   = { version = "1", features = ["full"] }
vt100   = "0.16"
futures-util = "0.3"
