[package]
name = "terminal-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "terminal_server"
path = "src/lib.rs"

[[bin]]
name = "terminal-server"
path = "src/main.rs"

[[bin]]
name = "gen-docs"
path = "src/bin/gen_docs.rs"

[dependencies]
portable-pty = "0.9.0"
vt100         = "0.16.2"
axum          = { version = "0.8.4", features = ["ws"] }
tokio         = { version = "1.44.2", features = ["full"] }
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
uuid          = { version = "1.16", features = ["v4", "serde"] }
dashmap       = "6.1"
futures-util  = "0.3"
base64        = "0.22"
libc          = "0.2"
utoipa        = { version = "4", features = ["uuid"] }

[dev-dependencies]
reqwest            = { version = "0.12", features = ["json"] }
tokio-tungstenite  = "0.26"
tokio              = { version = "1.44.2", features = ["full"] }
base64             = "0.22"
